add all client logos

--- a/index.html
+++ b/index.html
@@ -311,19 +311,17 @@
             <div class="row justify-content-center">
                 <div class="col-lg-12">
                     <div class="owl-carousel client-carousel">
-                        <img src="../img/logos/logo-ambit.webp" alt="Client Logo">
-                        <img src="../img/logos/logo-rajshree.webp" alt="Client Logo">
-                        <img src="../img/logos/logo-nyshaa.webp" alt="Client Logo">
-                        <img src="../img/logos/logo-pebble.webp" alt="Client Logo">
-                        <img src="../img/logos/logo-nexome.webp" alt="Client Logo">
-                        <img src="../img/logos/logo-nexome.webp" alt="Client Logo">
-                        <img src="../img/logos/logo-nexome.webp" alt="Client Logo">
-                        <img src="../img/logos/logo-nexome.webp" alt="Client Logo">
-                        <img src="../img/logos/logo-nexome.webp" alt="Client Logo">
-                        <img src="../img/logos/logo-nexome.webp" alt="Client Logo">
-                        <img src="../img/logos/logo-nexome.webp" alt="Client Logo">
-                        <img src="../img/logos/logo-nexome.webp" alt="Client Logo">
-                        <img src="../img/logos/logo-nexome.webp" alt="Client Logo">
+                        <img class="logo" src="../img/logos/logo-ambit.webp" alt="Client Logo">
+                        <img class="logo" src="../img/logos/logo-veena.webp" alt="Client Logo">
+                        <img class="logo" src="../img/logos/logo-nyshaa.webp" alt="Client Logo">
+                        <img class="logo" src="../img/logos/logo-pebble.webp" alt="Client Logo">
+                        <img class="logo" src="../img/logos/logo-rudra.webp" alt="Client Logo">
+                        <img class="logo" src="../img/logos/logo-nexome.webp" alt="Client Logo">
+                        <img class="logo" src="../img/logos/logo-lotus.webp" alt="Client Logo">
+                        <img class="logo" src="../img/logos/logo-silver.webp" alt="Client Logo">
+                        <img class="logo" src="../img/logos/logo-unique.webp" alt="Client Logo">
+                        <img class="logo" src="../img/logos/logo-rajshree.webp" alt="Client Logo">
+                        <img class="logo" src="../img/logos/logo-vvmansion.webp" alt="Client Logo">
                     </div>
                 </div>
             </div>
