update keywords for SEO improvement

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Tech Triq - Virtual Tour Company</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="description" content="Tech Triq creates immersive 360° virtual tours for real estate and businesses. Engage your audience, showcase properties, and boost marketing with interactive digital experiences">
-    <meta name="keywords" content="Virtual Tour, 360° Tour, Real Estate, Interactive Tour, Aerial Tour, WebAR, Augmented Reality, Interior Design Rendering, Exterior Design Rendering, Walkthrough Video, Location A/V, CGI & Superimpose">
+    <meta name="keywords" content="virtual tour, 360° tour, aerial tour, drone, immersive, interactive, real estate, WebAR, augmented reality, interior design rendering, exterior design rendering, walkthrough video, CGI, superimpose, location A/V, property marketing, virtual experience, project showcase, Tech Triq">
     <meta name="author" content="Tech Triq">
     
     <!-- Favicon -->
