add alt attributes to logo images for accessibility

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
     <!-- Navbar Start -->
     <nav class="navbar fixed-top navbar-expand-lg bg-dark navbar-dark py-1 py-lg-0">
         <a href="/" class="navbar-brand d-block d-lg-none">
-            <img class="navbar-img" src="img/Tech_Trique_logo.png">
+            <img class="navbar-img" src="img/Tech_Trique_logo.png" alt="Tech Triq Logo">
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
             <a href="/" class="navbar-brand mx-0 d-none d-lg-block">
-                <img class="navbar-img" src="img/Tech_Trique_logo.png">
+                <img class="navbar-img" src="img/Tech_Trique_logo.png" alt="Tech Triq Logo">
             </a>
             <div class="navbar-nav ml-auto py-0">
                 <a href="#home" class="nav-item nav-link active" onclick="closeNavbarOnClick()">Home</a>
@@ -340,13 +340,7 @@
                 <div class="col-lg-8">
                     <div class="owl-carousel testimonial-carousel">
                         <div class="text-center">
-                            <img class="img-fluid mx-auto mb-3" src="../img/logos/logo-ambit.webp" style="width: 200px;">
-                            <p style="font-size: 22px;">We were impressed by the exceptional quality of the 3D renderings and the stunning drone footage. The visuals brought our project to life and exceeded our expectations. The team was professional, creative and delivered on time. Highly recommend!</p>
-                            <h4>Abhishek Pandey</h4>
-                            <span>Ambit Developers & Realtors</span>
-                        </div>
-                        <div class="text-center">
-                            <img class="img-fluid mx-auto mb-3" src="../img/logos/logo-ambit.webp" style="width: 200px;">
+                            <img class="img-fluid mx-auto mb-3" src="../img/logos/logo-ambit.webp" style="width: 200px;" alt="Ambit Developers & Realtors Logo">
                             <p style="font-size: 22px;">We were impressed by the exceptional quality of the 3D renderings and the stunning drone footage. The visuals brought our project to life and exceeded our expectations. The team was professional, creative and delivered on time. Highly recommend!</p>
                             <h4>Abhishek Pandey</h4>
                             <span>Ambit Developers & Realtors</span>
