--- a/webar-brochure/index.html
+++ b/webar-brochure/index.html
@@ -44,14 +44,14 @@
     <!-- Navbar Start -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-dark navbar-dark py-1 py-lg-0">
         <a href="/" class="navbar-brand d-block d-lg-none">
-            <img class="navbar-img" src="../img/Tech_Trique_logo.png">
+            <img class="navbar-img" src="../img/Tech_Trique_logo.png" alt="Tech Triq Logo">
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
             <a href="/" class="navbar-brand mx-0 d-none d-lg-block">
-                <img class="navbar-img" src="../img/Tech_Trique_logo.png">
+                <img class="navbar-img" src="../img/Tech_Trique_logo.png" alt="Tech Triq Logo">
             </a>
             <div class="navbar-nav ml-auto py-0">
                 <a href="/" class="nav-item nav-link active">Home</a>
@@ -132,7 +132,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-7">
-                    <img class="img-fluid mb-4 mb-lg-0" src="../img/browser_support.webp">
+                    <img class="img-fluid mb-4 mb-lg-0" src="../img/browser_support.webp" alt="Browser Support">
                 </div>
                 <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">AR at your Fingertips</h3>
