--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
     <!-- Testimonial Start -->
     <div class="container-fluid py-5" id="testimonial">
         <div class="container py-5">
-            <div class="section-title position-relative text-center" style="margin-bottom: 120px;">
+            <div class="section-title position-relative text-center" style="margin-bottom: 35px;">
                 <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Testimonial</h3>
                 <h2 class="display-4">What they Say</h2>
             </div>
@@ -481,10 +481,10 @@
 
     <!-- Contact Javascript File -->
     <script src="mail/jqBootstrapValidation.min.js"></script>
-    <script src="mail/contact.js"></script>
+    <script src="mail/contact.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="js/main.min.js"></script>
     <script>
         document.getElementById('currentYear').textContent = new Date().getFullYear();
     </script>
