--- a/little-planet/index.html
+++ b/little-planet/index.html
@@ -18,8 +18,8 @@
     <!-- <link href="./lib/lightbox/css/lightbox.min.css" rel="stylesheet"> -->
 
     <!-- Customized Bootstrap Stylesheet -->
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.min.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.min.css">
 	<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 	<script type="importmap">
 	  {
@@ -39,7 +39,7 @@
 	  <!-- <a class="btn btn-primary font-weight-bold btn-scroll py-3 px-5 mt-2" type="button" style="position: absolute; bottom: 30px;" href="//storage.net-fs.com/hosting/8311954/0/">See our Services</a> -->
 	</div>
 
-	<script type="module" src="script.js"></script>
+	<script type="module" src="script.min.js"></script>
 	<script type="text/javascript">
 		window.onscroll = function() {
 		  window.scrollTo(0, 0);
