new:  use image renders for interior & exterior

--- a/aerial-tour/index.html
+++ b/aerial-tour/index.html
@@ -367,14 +367,11 @@
     <script src="../lib/waypoints/waypoints.min.js"></script>
     <script src="../lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="../lib/isotope/isotope.pkgd.min.js"></script>
-    <script src="../js/main.js" defer></script>
+    <script src="../js/main.min.js" defer></script>
 
     <!-- Contact Javascript File -->
     <script src="../mail/jqBootstrapValidation.min.js"></script>
-    <script src="../mail/contact.js"></script>
-
-    <!-- Template Javascript -->
-    <script src="../js/main.js"></script>
+    <script src="../mail/contact.min.js"></script>
     <script>
         document.getElementById('currentYear').textContent = new Date().getFullYear();
     </script>
