--- a/3d-cad-services/index.html
+++ b/3d-cad-services/index.html
@@ -100,9 +100,20 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-7">
-                    <video class="content-video w-100 h-100" autoplay loop muted playsinline>
+                    <!-- <video class="content-video w-100 h-100" autoplay loop muted playsinline>
                         <source src="../video/Interior.mp4" type="video/mp4">
-                    </video>
+                    </video> -->
+                    <div class="owl-carousel rendering-carousel" data-carousel="interior">
+                        <div class="item">
+                            <img src="../img/renders/interior/interior1.jpg" class="img-fluid" alt="Interior Design Rendering 1">
+                        </div>
+                        <div class="item">
+                            <img src="../img/renders/interior/interior2.jpg" class="img-fluid" alt="Interior Design Rendering 2">
+                        </div>
+                        <div class="item">
+                            <img src="../img/renders/interior/interior3.jpg" class="img-fluid" alt="Interior Design Rendering 3">
+                        </div>
+                    </div>
                 </div>
                 <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Interior Design Rendering</h3>
@@ -125,9 +136,20 @@
                     </p>
                 </div>
                 <div class="col-lg-7">
-                    <video class="content-video w-100 h-100" autoplay loop muted playsinline>
+                    <!-- <video class="content-video w-100 h-100" autoplay loop muted playsinline>
                         <source src="../video/Exterior.mp4" type="video/mp4">
-                    </video>
+                    </video> -->
+                    <div class="owl-carousel rendering-carousel" data-carousel="exterior">
+                        <div class="item">
+                            <img src="../img/renders/exterior/exterior1.jpg" class="img-fluid" alt="Exterior Design Rendering 1">
+                        </div>
+                        <div class="item">
+                            <img src="../img/renders/exterior/exterior2.jpg" class="img-fluid" alt="Exterior Design Rendering 2">
+                        </div>
+                        <div class="item">
+                            <img src="../img/renders/exterior/exterior3.jpg" class="img-fluid" alt="Exterior Design Rendering 3">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -274,14 +296,11 @@
     <script src="../lib/waypoints/waypoints.min.js"></script>
     <script src="../lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="../lib/isotope/isotope.pkgd.min.js"></script>
-    <script src="../js/main.js" defer></script>
+    <script src="../js/main.min.js" defer></script>
 
     <!-- Contact Javascript File -->
     <script src="../mail/jqBootstrapValidation.min.js"></script>
-    <script src="../mail/contact.js"></script>
-
-    <!-- Template Javascript -->
-    <script src="../js/main.js"></script>
+    <script src="../mail/contact.min.js"></script>
     <script>
         document.getElementById('currentYear').textContent = new Date().getFullYear();
     </script>
