fix: title on Ambit-Yojna

--- a/tours/ambit/yojna/index.html
+++ b/tours/ambit/yojna/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ambit - Primoris</title>
+  <title>Ambit - Yojna</title>
   <meta name="description" content="Explore your home at Ambit Yojna, Malad from any device">
   <style>
     body {
