new: update interior & exterior images

--- a/3d-cad-services/index.html
+++ b/3d-cad-services/index.html
@@ -105,19 +105,25 @@
                     </video> -->
                     <div class="owl-carousel rendering-carousel" data-carousel="interior">
                         <div class="item">
-                            <img src="../img/renders/interior/interior1.jpg" class="img-fluid" alt="Interior Design Rendering 1">
+                            <img src="../img/renders/interior/interior1.webp" class="img-fluid" alt="Interior Design Rendering 1">
                         </div>
                         <div class="item">
-                            <img src="../img/renders/interior/interior2.jpg" class="img-fluid" alt="Interior Design Rendering 2">
+                            <img src="../img/renders/interior/interior2.webp" class="img-fluid" alt="Interior Design Rendering 2">
                         </div>
                         <div class="item">
-                            <img src="../img/renders/interior/interior3.jpg" class="img-fluid" alt="Interior Design Rendering 3">
+                            <img src="../img/renders/interior/interior3.webp" class="img-fluid" alt="Interior Design Rendering 3">
+                        </div>
+                        <div class="item">
+                            <img src="../img/renders/interior/interior4.webp" class="img-fluid" alt="Interior Design Rendering 4">
+                        </div>
+                        <div class="item">
+                            <img src="../img/renders/interior/interior5.webp" class="img-fluid" alt="Interior Design Rendering 5">
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Interior Design Rendering</h3>
-                    <h2 class="display-4 mb-3">Transforming <span class="text-primary">Spaces</span> Elevating <span class="text-primary">Lives</span> </h1>
+                    <h2 class="display-4 mb-3">Transforming <span class="text-primary">Spaces</span> Elevating <span class="text-primary">Lives</span> </h2>
                     <p>At Tech Triq, we unlock your potential and translate it into breathtaking interior design renderings. Our process starts by understanding your aspirations, needs, and style. Then, our designers use cutting-edge technology to bring your vision to life, revealing every nuance.
                     <br>
                     We challenge conventions to create spaces that are not just aesthetically pleasing, but deeply engaging and emotionally resonant. Whether you seek creativity, serenity, or stronger connections, let us help you realize your dream one stunning rendering at a time.
@@ -141,13 +147,13 @@
                     </video> -->
                     <div class="owl-carousel rendering-carousel" data-carousel="exterior">
                         <div class="item">
-                            <img src="../img/renders/exterior/exterior1.jpg" class="img-fluid" alt="Exterior Design Rendering 1">
+                            <img src="../img/renders/exterior/exterior1.webp" class="img-fluid" alt="Exterior Design Rendering 1">
                         </div>
                         <div class="item">
-                            <img src="../img/renders/exterior/exterior2.jpg" class="img-fluid" alt="Exterior Design Rendering 2">
-                        </div>
+                            <img src="../img/renders/exterior/exterior2.webp" class="img-fluid" alt="Exterior Design Rendering 2">
+                        </div>`
                         <div class="item">
-                            <img src="../img/renders/exterior/exterior3.jpg" class="img-fluid" alt="Exterior Design Rendering 3">
+                            <img src="../img/renders/exterior/exterior3.webp" class="img-fluid" alt="Exterior Design Rendering 3">
                         </div>
                     </div>
                 </div>
