new: update new renders

--- a/3d-cad-services/index.html
+++ b/3d-cad-services/index.html
@@ -119,6 +119,9 @@
                         <div class="item">
                             <img src="../img/renders/interior/interior5.webp" class="img-fluid" alt="Interior Design Rendering 5">
                         </div>
+                        <div class="item">
+                            <img src="../img/renders/interior/interior6.webp" class="img-fluid" alt="Interior Design Rendering 6">
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-5">
@@ -154,6 +157,15 @@
                         </div>`
                         <div class="item">
                             <img src="../img/renders/exterior/exterior3.webp" class="img-fluid" alt="Exterior Design Rendering 3">
+                        </div>
+                        <div class="item">
+                            <img src="../img/renders/exterior/exterior4.webp" class="img-fluid" alt="Exterior Design Rendering 4">
+                        </div>
+                        <div class="item">
+                            <img src="../img/renders/exterior/exterior5.webp" class="img-fluid" alt="Exterior Design Rendering 5">
+                        </div>
+                        <div class="item">
+                            <img src="../img/renders/exterior/exterior6.webp" class="img-fluid" alt="Exterior Design Rendering 6">
                         </div>
                     </div>
                 </div>
