--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <div class="project-item">
                             <img class="img-fluid" src="../img/vr.webp" alt="Interactive Virtual Tour">
                             <a class="btn btn-project-features" href="/virtual-tour">
-                                <p>Navigate seamlessly in an interactive, 360°-degree virtual experience to get a fully immersive sense of the space<br><br><span class="info-span">Click to Know More</span></p>
+                                <p>Navigate seamlessly in an interactive, 360° degree virtual experience to get a fully immersive sense of the space<br><br><span class="info-span">Click to Know More</span></p>
                             </a>
                         </div>
                         <div class="bg-secondary text-center p-4">
@@ -381,7 +381,7 @@
                         <div id="success"></div>
                         <form name="sentMessage" id="contactForm" novalidate="novalidate" method="POST">
                             <div class="form-row">
-                                <input type="hidden" name="access_key" value="bed5769b-818d-4d80-b42c-6c288c4b80f0">
+                                <input type="hidden" name="access_key" value="845c70e0-b122-4d08-b6f2-53f931072a27">
                                 <div class="col-sm-6 control-group">
                                     <input type="text" class="form-control bg-secondary border-0 py-4 px-3" id="name" name="name" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name" />
                                     <p class="help-block text-danger"></p>
