--- a/webar-brochure/index.html
+++ b/webar-brochure/index.html
@@ -263,7 +263,7 @@
                 <h2 class="font-secondary display-4">Get In Touch</h2>
             </div>
             <div class="row justify-content-center">
-                <div class="col-lg-8">
+                <div class="col-lg-6">
                     <div class="contact-form">
                         <div id="success"></div>
                         <form name="sentMessage" id="contactForm" novalidate="novalidate" method="POST">
@@ -274,12 +274,22 @@
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="col-sm-6 control-group">
-                                    <input type="email" class="form-control bg-secondary border-0 py-4 px-3" id="email" name="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email" />
+                                    <input type="email" class="form-control bg-secondary border-0 px-3" id="email" name="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email" />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <input type="text" class="form-control bg-secondary border-0 py-4 px-3" id="subject" name="subject" placeholder="Your Subject" required="required" data-validation-required-message="Please enter your Subject" />
+                                <select class="form-control bg-secondary border-0 py-2 px-3" id="subject" name="subject" required="required" data-validation-required-message="Please select your service">
+                                    <option disabled selected>Select Your Service</option>
+                                    <option value="Interactive Virtual Tour">Interactive Virtual Tour</option>
+                                    <option value="Aerial 360° Tour">Aerial 360° Tour</option>
+                                    <option value="WebAR Brochure">WebAR Brochure</option>
+                                    <option value="Interior Design Rendering">Interior Design Rendering</option>
+                                    <option value="Exterior Design Rendering">Exterior Design Rendering</option>
+                                    <option value="Walkthrough Video">Walkthrough Video</option>
+                                    <option value="Location A/V">Location A/V</option>
+                                    <option value="CGI & Superimpose">CGI & Superimpose</option>
+                                </select>
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="control-group">
@@ -287,7 +297,7 @@
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="text-center">
-                                <button class="btn btn-primary font-weight-bold py-3 px-5" type="submit" id="sendMessageButton">Send Message</button>
+                                <button class="btn btn-primary font-weight-bold py-3 px-5" type="submit" id="sendMessageButton" disabled>Send Message</button>
                             </div>
                         </form>
                     </div>
