fix: description for signia tour

--- a/tours/signia/project_1/index.html
+++ b/tours/signia/project_1/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Signia</title>
-  <meta name="description" content="Explore your home at Ambit Primoris Kandivali (W) from any device">
+  <meta name="description" content="Explore your home at Signia from any device">
   <style>
     body {
       font-family: Calibri, sans-serif;
